src/test/ui/error-codes/E0451.stderr
error[E0451]: field `b` of struct `bar::Foo` is private
  --> $DIR/E0451.rs:14:21
   |
LL |     let bar::Foo{a, b} = foo;
   |                     ^ field `b` is private

error[E0451]: field `b` of struct `bar::Foo` is private
  --> $DIR/E0451.rs:18:29
   |
LL |     let f = bar::Foo{ a: 0, b: 0 };
   |                             ^^^^ field `b` is private

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0451`.
